--- a/style.html
+++ b/style.html
@@ -1842,6 +1842,47 @@
         .modal-print .modal-close:focus-visible {
             color: #0f172a;
         }
+        .modal.modal-pdf {
+            display: none;
+            backdrop-filter: blur(2px);
+        }
+        .pdf-viewer-body {
+            background: #f8fafc;
+        }
+        .pdf-frame-wrapper {
+            background: #fff;
+            border: 1px solid #d0d7e2;
+            border-radius: 10px;
+            box-shadow: 0 12px 32px rgba(15, 23, 42, 0.12);
+            height: 70vh;
+            overflow: hidden;
+        }
+        .pdf-frame-wrapper iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+            background: #1f2937;
+        }
+        .pdf-empty-state {
+            margin-top: 16px;
+            padding: 24px;
+            border: 1px dashed #cbd5e1;
+            border-radius: 10px;
+            color: #4b5563;
+            text-align: center;
+            background: #fff;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 8px;
+        }
+        .pdf-empty-state i {
+            font-size: 32px;
+            color: #64748b;
+        }
+        .pdf-empty-state.hidden {
+            display: none;
+        }
         .print-ticket {
             width: min(100%, 440px);
             background: #ffffff;
